# DirectX12_Samples

./: .editorconfig  ARCHITECTURE_RELATIONSHIP.md  DirectX12_Samples.sln  README.md
ApplicationDLL/: AppRuntime.cpp  AppRuntime.h  Application.cpp  Application.h  ApplicationDLL.vcxproj  ApplicationDLL.vcxproj.filters  DX12Texture.h  DescriptorHeapManager.cpp  DescriptorHeapManager.h  FrameLoop.cpp  FrameLoop.h  GameQuad.cpp  GameQuad.h  OpenGLShaderCompiler.cpp  OpenGLShaderCompiler.h  PIE_API.md  PieAutoPublish.cpp  PieAutoPublish.h  PieLoader.cpp  PieLoader.h  PolygonTest.cpp  PolygonTest.h  RHITexture.h  pch.h  (+7 more)
EditorQt/: CMakeLists.txt  CMakePresets.json  Editor.vcxproj  Editor.vcxproj.filters
EditorQt/build-msvc/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  EditorQt.slnx  EditorQt.vcxproj  EditorQt.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
EditorQt/build-msvc/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
EditorQt/build-msvc/EditorQt_autogen/include_Debug/UVLADIE3JM/: moc_MainWindow.cpp  moc_MainWindow.cpp.d
EditorQt/src/: EditorRuntimeHost.cpp  EditorRuntimeHost.h  IEditorFrontend.h  ImGuiEditorFrontend.cpp  ImGuiEditorFrontend.h  LaunchOptions.cpp  LaunchOptions.h  MainWindow.cpp  MainWindow.h  QtEditorFrontend.cpp  QtEditorFrontend.h  RuntimeBridge.cpp  RuntimeBridge.h  main.cpp
(+216 files in other folders)
